# VogueX

./: .dockerignore  .env.copy  .gitignore  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ERRORS.md  INSTALL.md  LICENSE.md  README.md  RELEASE.md  Release.md  check_env.py  config.py  fashion_app_tests.py  main.py  requirements.txt  requirements.txt.py  setup.cfg  setup.py
.github/workflows/: format.yml
agents/: fashion_agent.py  style_analysis_agent.py
data/chroma_conversations/: chroma.sqlite3
data/chroma_fashion/: chroma.sqlite3
datasets/model_params/: articleType_label_encoder.pkl  baseColour_label_encoder.pkl  gender_label_encoder.pkl  masterCategory_label_encoder.pkl  season_label_encoder.pkl  subCategory_label_encoder.pkl  text_feature_extractor.h5  text_feature_extractor.pkl  usage_label_encoder.pkl
docs/: Scalability Document.md
scripts/: ClothRecommenderTrainer.ipynb  clothrecommendertrainer_text.py  inference.py  schema.sql
test-reports/: test-results.xml
tests/: conftest.py  test_auth.py  test_helpers.py  test_imageSearchapi.py  test_labelenc.py  test_preferences.py  test_rev.py  test_shopping.py  testclothrecommender.py
tools/: database_tool.py  image_search_tool.py  shop_tool.py  weather_tool.py
utils/: ollama_client.py  prompt_templates.py
website/: CustomMixin.py  __init__.py  agg_dataset.py  auth.py  contracts.py  dress.py  favourites.py  helper.py  label_enc.py  models.py  preferences.py  recommendation_model.py  recommendations.py  reviews.py  shopping.py  test.py  utils.py  views.py
(+43 files in other folders)
